Fix some z-index issues - menus should cover nodes while expanded

--- a/src/stylus/components/inspector-panel.styl
+++ b/src/stylus/components/inspector-panel.styl
@@ -10,7 +10,7 @@ inspector-panel-inner-height = 500px
     right 0px
     margin 0px
     background-color white
-    z-index 1
+    z-index 4
     margin 0px
     transition 0.2s
 
@@ -43,7 +43,7 @@ inspector-panel-inner-height = 500px
       cursor pointer
       border-radius 5px
       box-shadow: -2px 0px 2px hsla(0,0,50,0.5)
-      z-index 4
+      z-index 5
 
   .inspector-panel-content
       box-sizing border-box
